--- a/src/PowerBidOrchestrator.Api/.gitignore
+++ b/src/PowerBidOrchestrator.Api/.gitignore
@@ -1,4 +1,4 @@
-﻿# Created by https://www.toptal.com/developers/gitignore/api/csharp
+# Created by https://www.toptal.com/developers/gitignore/api/csharp
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp
 
 ### Csharp ###
